[package]
name = "snd"
version = "0.1.0"
authors = ["mike zhang <zhangmingkai.1989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
trust-dns-client = "*"
nonzero_ext = { version = "0.2.0", default-features = false }
governor = "0.3.1"
leaky-bucket = "0.9.0"
rand = "0.8.0"
log = "0.4.0"
env_logger = "0.8.2"
lazy_static = "1.4.0"
validator = "0.12.0"
crossbeam-channel = "0.5.0"
chrono = "0.4.19"
reqwest = {version = "0.10.10", features = ["blocking"]}
base64 = "0.13.0"
net2="0.2.37"
linked-list="0.0.3"
rustls="0.17.0"
webpki="0.21.4"
webpki-roots = "0.21.0"
num_cpus = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
mio = "0.7.7"
core_affinity = "0.5.10"
crossbeam  = "0.8"
h2 = "0.3.1"
http = "0.2"
bytes = "1"
[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"]}

[[bench]]
name = "bench"
harness = false


[[bin]]
name = "snd"
src = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"